changes have been added to portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://media-exp1.licdn.com/dms/image/D4D03AQFylbCZmCtB3Q/profile-displayphoto-shrink_400_400/0/1667745222574?e=1675900800&v=beta&t=eW5ES4H3O2ilLVyBTFjTl1ZpfrJO1DH3IQ7bKM6Vgr8"
+      href="https://i.ibb.co/YjPkG6h/Whats-App-Image-2022-12-03-at-6-36-13-PM.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
